--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
-
+language: android
+android:
+components:
+ - build-tools-24.0.0
+ - android-24
+ - extra
+ - sys-img-armeabi-v7a-android-19
+ - sys-img-x86-android-17
