- tabs - switch back to AppCompat - problem details activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+
         <activity
-            android:name="org.ecomap.android.app.MainActivity"
+            android:name=".MainActivity"
             android:label="Ecomap" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,11 +34,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="org.ecomap.android.app.MapsActivity"
+            android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".ProblemDetailsActivity"
+            android:label="@string/title_activity_problem_details"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.ecomap.android.app.MainActivity" />
         </activity>
     </application>
 
