Added markers by type.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,26 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="org.ecomap.android.app.MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:name=".MainActivity"
+            android:label="Ecomap" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".ProblemDetailsActivity"
+            android:label="@string/title_activity_problem_details"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.ecomap.android.app.MainActivity" />
         </activity>
     </application>
 
