EcoMapProvider + Contract + Manifest + DBFill

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
+        <provider
+            android:authorities="org.ecomap.android.app.data"
+            android:name=".data.EcoMapProvider"/>
+        <service android:name=".sync.EcoMapService"/>
     </application>
 
 </manifest>
