--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.maps.android:android-maps-utils:0.3.+'
     compile 'com.getbase:floatingactionbutton:1.9.1'
+    compile 'com.github.shell-software:fab:1.1.2'
 }
