--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.3.+'
     compile 'com.getbase:floatingactionbutton:1.9.1'
     compile 'com.github.shell-software:fab:1.1.2'
+    compile 'com.wunderlist:sliding-layer:1.1.1'
 }
