--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     compile 'com.github.shell-software:fab:1.1.2'
+    compile 'com.wunderlist:sliding-layer:1.1.1'
 }
