--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     compile 'com.wunderlist:sliding-layer:1.1.1'
+    compile 'com.android.support:design:22.2.0'
 }
