--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
-    lintOptions{
+    lintOptions {
         abortOnError false
     }
 
@@ -32,4 +32,5 @@ dependencies {
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     compile 'com.wunderlist:sliding-layer:1.1.1'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
