--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <!--
- The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but are recommended.
-    -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -49,23 +44,28 @@
                 android:value=".activities.MainActivity" />
         </activity>
         <activity
+            android:name=".activities.Profile"
+            android:label="@string/title_activity_profile"
+            android:parentActivityName=".activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+        <activity
             android:name=".activities.ViewPhotosActivity"
             android:label="@string/title_activity_view_photos"
-            android:theme="@style/AppThemeTransparentActionBar"
-            android:parentActivityName=".activities.ProblemDetailsActivity" >
+            android:parentActivityName=".activities.ProblemDetailsActivity"
+            android:theme="@style/AppThemeTransparentActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ProblemDetailsActivity" />
         </activity>
-
-
 
         <provider
             android:name=".data.EcoMapProvider"
             android:authorities="org.ecomap.android.app.data" />
 
         <service android:name=".sync.EcoMapService" />
-
     </application>
 
 </manifest>
