--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.ecomap.android.app" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.ecomap.android.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,9 +17,11 @@
 
     <uses-feature
         android:glEsVersion="0x00020000"
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <application
+        tools:replace="icon"
         android:name=".EcomapApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -57,6 +60,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ProblemDetailsActivity" />
         </activity>
+        <activity android:name="me.iwf.photopicker.PhotoPickerActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+
+        <activity android:name="me.iwf.photopicker.PhotoPagerActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+
         <provider
             android:name=".data.EcoMapProvider"
             android:authorities="org.ecomap.android.app.data" />
