--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':PhotoPicker')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.maps.android:android-maps-utils:0.3.+'
@@ -32,4 +36,5 @@ dependencies {
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     compile 'com.wunderlist:sliding-layer:1.1.1'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.github.donglua:PhotoPicker:v0.2.0'
 }
