--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,10 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     /**/
 
+    //pie chart
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.1'
+
 }
