--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ local.properties
 
 # Gradle generated files
 .gradle/
+.build/
 
 # Signing files
 .signing/
@@ -25,6 +26,7 @@ local.properties
 .idea/modules.xml
 .idea/scopes/scope_settings.xml
 .idea/vcs.xml
+.idea/gradle.xml
 *.iml
 
 # OS-specific files
