--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
-
+        <activity
+                 android:name=".activities.ViewPhotosActivity"
+                android:label="@string/title_activity_view_photos"
+                 android:parentActivityName=".activities.MainActivity"
+                  android:theme="@style/AppThemeTransparentActionBar" >
+        </activity>
         <provider
             android:name=".data.EcoMapProvider"
             android:authorities="org.ecomap.android.app.data" />
