--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     /**/
 
+    compile 'com.github.donglua:PhotoPicker:v0.2.0'
+
 }
