--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,10 +54,6 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <activity
-            android:name="me.iwf.photopicker.PhotoPagerActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
-        <activity
             android:name=".activities.StaticPagesActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppThemeTransparentActionBar">
@@ -76,6 +72,8 @@
 
         <service android:name=".sync.EcoMapService" />
         <service android:name=".sync.GetResourcesService" />
+        <service android:name=".sync.UploadingService"
+            android:process=":uploadService"/>
 
     </application>
 
