--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".activities.EditProblem"
+            android:label="@string/profile"
+            android:parentActivityName=".activities.MainActivity">
+        </activity>
 
         <activity
             android:name=".activities.ViewPhotosActivity"
