--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:name=".activities.ViewPhotosActivity"
             android:label="@string/title_activity_view_photos"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppThemeTransparentActionBar"></activity>
+            android:theme="@style/AppThemeTransparentActionBar"/>
         <activity
             android:name="me.iwf.photopicker.PhotoPickerActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
