--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 22
@@ -47,10 +48,12 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     /**/
     repositories {
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
     compile 'com.github.donglua:PhotoPicker:v0.2.0'
     //pie chart
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
 
 }
