--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,8 @@
             </intent-filter>
         </receiver>
 
+        <!--android:process=":sendPendingProblemService"-->
+
         <service
             android:name=".sync.SendPendingProblemService"
             android:exported="false" >
