--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         config {
             keyAlias 'ecomap'
             keyPassword '123456'
-            storeFile file('E:/Android/Projects/Kv-009/ecomap.jks')
+            storeFile file('/home/yura/ecomap.jks')
             storePassword '123456'
         }
     }
@@ -19,7 +19,7 @@ android {
         applicationId "org.ecomap.android.app"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 3
+        versionCode 5
         versionName "1.0"
     }
     buildTypes {
@@ -27,7 +27,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
             minifyEnabled false
-            debuggable true
         }
     }
     productFlavors {
@@ -35,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.android.support:design:22.2.1'
