--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ android {
         config {
             keyAlias 'ecomap'
             keyPassword '123456'
-            storeFile file('E:/Android/Projects/Kv-009/ecomap.jks')
+            storeFile file('/Users/Tatiana/Documents/ecomap.jks')
             storePassword '123456'
         }
     }
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.0"
     lintOptions {
         abortOnError false
     }
@@ -22,20 +22,25 @@ android {
         versionCode 3
         versionName "1.0"
     }
+
     buildTypes {
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+        //    signingConfig signingConfigs.config
             minifyEnabled false
-            debuggable true
+        //    debuggable true
         }
     }
+
     productFlavors {
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'org.parceler:parceler:0.2.13'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.android.support:design:22.2.1'
@@ -76,4 +81,7 @@ dependencies {
     //pie chart
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+
+
+
 }
