--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,20 +6,20 @@ android {
         config {
             keyAlias 'ecomap'
             keyPassword '123456'
-            storeFile file('/home/yura/ecomap.jks')
+            storeFile file('C:/Users/yrid/ecomap.jks')
             storePassword '123456'
         }
     }
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '23.0.2'
     lintOptions {
         abortOnError false
     }
     defaultConfig {
         applicationId "org.ecomap.android.app"
         minSdkVersion 15
-        targetSdkVersion 22
-        versionCode 5
+        targetSdkVersion 23
+        versionCode 6
         versionName "1.0"
     }
     buildTypes {
@@ -30,6 +30,10 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
